# reliaansible

./: .env  .gitattributes  .gitignore  .gitignore-ci  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  simulate_app.py
.github/: .gitignore
.github/ISSUE_TEMPLATE/: bug_report.md
.relia-data/: relia.db  simulated_db.json
.relia-playbooks/: 7c056b7c-8745-47be-8d3f-27c76bdb053f.yml  7c9691f1-a007-4ea9-a57a-2c3addb0e781.yml  a1bdf606-949e-41d9-882a-edb0efebd4d0.yml  b92e8591-dc2b-460e-82b2-47ad2e1ac158.yml  f87a2a19-b6f7-4edb-bc08-9b14e80c6e0e.yml  fb4ae6a4-8d2c-4a88-b340-72254fab09b1.yml
backend/: __init__.py  alerts.py  app.py  auth.py  cache.py  config.py  database.py  db_pool.py  llm_adapter.py  logging_handlers.py  monitoring.py  plugin_loader.py  secrets.py  security.py  tasks.py  utils.py
docs/: architecture.md  async_tasks.md  caching.md  ci_cd.md  database.md  security.md  troubleshooting.md
extension/: .vscodeignore  CHANGELOG.md  README.md  build.js  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
kubernetes/: README.md  deployment.yaml  hpa.yaml  kustomization.yaml  networkpolicy.yaml  service.yaml
relia_cli/: __init__.py  config.py  main.py  telemetry.py
scripts/: ci_checks.sh
starter/: vm-bootstrap.yml  webserver.yml
tests/: conftest.py  test_app_api.py  test_auth.py  test_backend_app.py  test_cache.py  test_cli.py  test_database.py  test_llm_adapter.py  test_monitoring.py  test_plugin_loader.py  test_services.py  test_tasks.py
(+24 files in other folders)
